--- a/POETerminal1/Config/POETerminal1.config
+++ b/POETerminal1/Config/POETerminal1.config
@@ -1,11 +1,16 @@
 <POETerminal>
   <COM>COM8</COM>
-  <LOG>L:\solar.pst69.homeip.net\track.xml</LOG>
+  <LOG>L:\solar.pst69.homeip.net\test.xml</LOG>
   <net>
-    <node id="1" name="000A">
-      <analog node="1" id="4" />
-      <analog node="1" id="3" />
+    <node id="1" name="0043">
+      <analog node="1" id="1" graphing="on" />
+      <analog node="1" id="2" graphing="on" />
+      <analog node="1" id="3" graphing="on" />
+      <analog node="1" id="4" graphing="on" />
+      <digital node="1" id="1" />
+      <digital node="1" id="2" />
+      <switch node="1" id="1" />
+      <switch node="1" id="2" />
     </node>
-    <node id="2" name="000B" />
   </net>
 </POETerminal>
