adaption of first implementation POEpwm library

--- a/POETerminal1/Config/POETerminal1.config
+++ b/POETerminal1/Config/POETerminal1.config
@@ -2,15 +2,16 @@
   <COM>COM8</COM>
   <LOG>L:\solar.pst69.homeip.net\test.xml</LOG>
   <net>
-    <node id="1" name="0043">
-      <analog node="1" id="1" graphing="on" />
-      <analog node="1" id="2" graphing="on" />
-      <analog node="1" id="3" graphing="on" />
-      <analog node="1" id="4" graphing="on" />
+    <node id="1" name="0051">
+      <analog node="1" id="1" />
+      <analog node="1" id="2" />
+      <analog node="1" id="3" />
+      <analog node="1" id="4" />
       <digital node="1" id="1" />
       <digital node="1" id="2" />
       <switch node="1" id="1" />
       <switch node="1" id="2" />
+      <pwm node="1" id="1" />
     </node>
   </net>
 </POETerminal>
