added a PWM input form

--- a/POETerminal1/POETerminal1.csproj
+++ b/POETerminal1/POETerminal1.csproj
@@ -87,6 +87,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormPWM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPWM.Designer.cs">
+      <DependentUpon>FormPWM.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormPWM.resx">
+      <DependentUpon>FormPWM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
