more than one PWM on a node

--- a/POETerminal1/Config/POETerminal1.config
+++ b/POETerminal1/Config/POETerminal1.config
@@ -2,7 +2,7 @@
   <COM>COM8</COM>
   <LOG>L:\solar.pst69.homeip.net\test.xml</LOG>
   <net>
-    <node id="1" name="0053">
+    <node id="1" name="0054">
       <analog node="1" id="1" />
       <analog node="1" id="2" />
       <analog node="1" id="3" />
@@ -12,6 +12,7 @@
       <switch node="1" id="1" />
       <switch node="1" id="2" />
       <pwm node="1" id="1" />
+      <pwm node="1" id="2" />
     </node>
   </net>
 </POETerminal>
